  * Cleaned up the lsl.misc.dedispersion.delay() function so that it will work with lists of single frequency values
  * Small fix to the lsl.imaging.selfCal module to make it more robust when not all antennas are present
  * Updated the updateLSLSSMIF.py script to use the new LWA1 SSMIF location on the archive

1.1.0
  * Updated the lsl.imaging.deconv module to include a source-based CLEAN method and a forward-modeling/least squares method
  * Added support for phase centers other than zenith to the various functions in lsl.imaging.overlay
  * Added support for determining coordinates for images with phase centers other than zenith to the lsl.imaging.utils module
  * Added a new image analysis module, lsl.imaging.analysis, that allows one to find point sources in a 2-D image
  * Added backward compatibility for older metadata tarball formats to the lsl.common.metabundle module (Ticket #61)
  * Added preliminary support for working with circular polarizations in the correlator (lsl.correlator.fx) and imaging (lsl.imaging.utils) modules
  * Added an option of imageIDI.py to overlay a topocentric graticle rather than a equatorial one
  * Added better support for non-linear polarizations to imageIDI.py
  * Added support for retrieving the file start time in samples to the various lsl.reader.ldp.LDPFileBase sub-classes
  * Removed the lsl.misc.mathutil.robustmean() function in favor of lsl.statistics.robust.mean()
  * Added a function to the lsl.astro module to help deal with correcting a celestial coordinate for nutation
  * Added support for image weighting and tapering with the new lsl.imaging.utils.ImgWPlus class
  * Switched lsl.imaging.utils.buildGriddedImage() over to using the new ImgWPlus class
  * Added a new RadioEarthSatellite class to lsl.sim.vis help with simulating satellites that may be transmitting within the observing band
  * Added the lsl.misc.ionosphere module to help with computing the dispersion and rotation measure of the ionosphere