@@ -11,6 +11,11 @@
   * Cleaned up the lsl.misc.dedispersion.delay() function so that it will work with lists of single frequency values
   * Small fix to the lsl.imaging.selfCal module to make it more robust when not all antennas are present
   * Updated the updateLSLSSMIF.py script to use the new LWA1 SSMIF location on the archive
+  * Added new ionosphere model sources to the lsl.misc.ionosphere module
+  * Changed the disk caching to lsl.misc.ionosphere to store only gzipped files
+  * Added optiosn for other model sources to getIonosphericRM.py
+  * Fixed a bug in correlateTBW.py/correlateTBN.py that causes the script to usually write out an Extended IDI file
+  * Fixed a bug in splitSession.py that caused the script to crash
 
 1.1.0
   * Updated the lsl.imaging.deconv module to include a source-based CLEAN method and a forward-modeling/least squares method
